--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,26 @@
 # Name of workflow
-name: Lint workflow
+name: Deploy to Render
 
 # Trigger workflow on all pull requests
 on:
   pull_request:
     branches:
-      - develop
-      - staging
+      - main
 
 # Jobs to carry out
 jobs:
-  test:
-    # Operating system to run job on
-    runs-on: ubuntu-latest
-
-    # Steps in job
-    steps:
-      # Get code from repo
-      - name: Checkout code
-        uses: actions/checkout@v1
-
-      - name: Use Node.js 21.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 21.x
-
-      # Install dependencies
-      - name: 🧰 Install Deps
-        run: npm install
-        
-      # Run lint
-      - name: Run Lint
-        run: npm run lint
+    cicd:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - name: Test
+          run: |
+            npm install
+            npm run build
+            npm run start &
+            npm run test-component
+        - name: Deploy to Render
+          env:
+            DEPLOY_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+          run: |
+            curl "$DEPLOY_URL"
